mobile view completed

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -12,6 +12,9 @@
         align-items: center;
         justify-content: center;
         transition:all 1s ease;
+        @include mobile{
+            width: 200px;
+        }
         
         &.active{
             right: 0;
