--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -2,6 +2,9 @@
 .contact {
   background-color: white;
   display: flex;
+  @include mobile {
+    flex-direction: column;
+  }
   .left {
     flex: 1;
     overflow: hidden;
@@ -30,11 +33,20 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 20px;
+          margin-bottom: 5px;
+        }
       }
       textarea {
         width: 300px;
         height: 200px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 100px;
+        }
       }
       button {
         width: 150px;
@@ -50,6 +62,11 @@
         padding: 30px;
         background-color: rgb(194, 240, 194);
         border-radius: 20px;
+        @include mobile {
+          // margin-top: 1px;
+         padding: 10px;
+         border-radius: 10px;
+        }
         span {
           color: $mainColor;
         }
