--- a/src/components/Intro/intro.scss
+++ b/src/components/Intro/intro.scss
@@ -13,10 +13,10 @@
     flex: 0.5;
     overflow: hidden;
 
-    .imgContainer {
+    .imageContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-color: black;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
