--- a/src/components/Work/work.scss
+++ b/src/components/Work/work.scss
@@ -1,21 +1,25 @@
+@import "../../global.scss";
 .work {
   background-color: crimson;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  .arrow{
-      height: 50px;
-      position: absolute;
-cursor: pointer;
-      &.left{
-          left: 100px;
-          transform: rotateY(180deg);
-      }
-      &.right{
-          right: 100px;
-          transform: rotateX(180deg);
-      }
+  .arrow {
+    height: 50px;
+    position: absolute;
+    cursor: pointer;
+    @include mobile{
+      display: none;
+    }
+    &.left {
+      left: 100px;
+      transform: rotateY(180deg);
+    }
+    &.right {
+      right: 100px;
+      transform: rotateX(180deg);
+    }
   }
   .slider {
     height: 350px;
@@ -23,6 +27,11 @@ cursor: pointer;
     position: absolute;
     left: 0;
     transition: all 1s ease-out;
+    @include mobile{
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
     .container {
       width: 100vw;
       display: flex;
@@ -37,6 +46,11 @@ cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
+        @include mobile{
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
       }
       .left {
         flex: 4;
@@ -58,20 +72,33 @@ cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
-            img{
-                width: 40px;
+            @include mobile {
+              width: 20px;
+              height: 20px;
+            }
+            img {
+              width: 40px;
+              @include mobile {
+                width: 15px;
+              }
             }
           }
-          h2{
-              font-size: 20px;
+          h2 {
+            font-size: 20px;
+            @include mobile{
+              font-size: 13px;
+            }
           }
-          p{
-              font-size: 16px;
+          p {
+            font-size: 16px;
+            @include mobile{
+              display: none;
+            }
           }
-          span{
-              font-size: 15px;
-              font-weight: 600;
-              text-decoration: underline;
+          span {
+            font-size: 15px;
+            font-weight: 600;
+            text-decoration: underline;
             cursor: pointer;
           }
         }
@@ -83,12 +110,11 @@ cursor: pointer;
         align-items: center;
         justify-content: center;
         overflow: hidden;
-    img{
-        width: 400px;
-        transform: rotate(-10deg);
-    }  
-    
-    }
+        img {
+          width: 400px;
+          transform: rotate(-10deg);
+        }
+      }
     }
   }
 }
