--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -33,6 +33,7 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        padding: 5px;
         @include mobile {
           width: 200px;
           height: 20px;
@@ -43,6 +44,7 @@
         width: 300px;
         height: 200px;
         font-size: 14px;
+        padding: 5px;
         @include mobile {
           width: 200px;
           height: 100px;
